css/styles.css
/* ... */
#dsm_y_coords, #dsm_prop_y_coords {
	width:30px;
	height:530px;
	border:0px solid black;
	position:relative;
	top:0px;
	left:0px;
	float:left;
}

#dsm_x_coords, #dsm_prop_x_coords {
	padding-left:30px;
	width:530px;
	height:15px;
	border:0px solid black;
	position:relative;
	top:0px;
	left:0px;
	float:left;
}

canvas {
	background-color:#0f0f0f;
	border:4px solid #cdcdcd;
	opacity:1;
	margin-left:5px;
	margin-right:5px;
}

#canvases div img {
	border:4px solid #cdcdcd;
	position:absolute;
	float:left;
}

#canvas1 {
	float:left; /* remove when raster is selected */ 
	margin-left:112px;
}

#canvas2 {
	float:left; /* remove when raster is selected */ 
	margin-left:10px;
}

#canvases {
	position:relative;
	width:1260px;
	margin-left:auto;
	margin-right:auto;
	margin-top:30px;
	margin-bottom:2px;
	overflow:visible;
	height:550px;
}

#labels {
	width:1360px;
	margin-left:auto;
	margin-right:auto;
	margin-top:0px;
	margin-bottom:0px;
	overflow:visible;
	height:10px;
}

#lhs, #rhs {
	text-align:center;
	width:50%;
	float:left;
	font-family:Signika, Helvetica, Arial;
	color:#3b3b3b;
	font-weight:400;
	font-size:30px;
}

#page {
	width:1360px;
	margin-left:auto;
	margin-right:auto;
	margin-top:20px;
	margin-bottom:30px;
	height:3450px;
}

.axis g text {
	opacity:0.5;
}

#rotate {
	background-color:black;
	width:658px;
	height:660px;
	display:none;
}

#metric {
	width:100%;
	height:790px;
	/*border:1px solid #cccccc;*/
	margin-top:0px;
	padding-top:30px;
	/*background-image: url(../images/noise.png);*/
	background-image:url(../images/alpha.png);
	linear-gradient(hsla(0,0%,100%,.7), hsla(0,0%,100%,.4));
}

#version_select {
	text-align:center;
	width:100%;
	height:50px;
	padding-top:15px;
	padding-bottom:15px;
	border-bottom:0px solid #cccccc;
	font-size:24px;
	/*background-image: url(../images/noise_light.png);
	linear-gradient(hsla(0,0%,100%,.7), hsla(0,0%,100%,.4));*/
	background-image: url(../images/alpha.png);
}

#main_options {
	margin-left:auto;
	margin-right:auto;

	width:1360px;
	height:50px;
	margin-top:20px;
	margin-bottom:30px;
	font-weight:300;
	border-radius:30px;
	/*background-color:#d9d9d9;
	background-image:url(../images/gradient_grey.png);
	background-repeat:repeat-x;*/
	background-image:url(../images/alpha.png);
}

#main_options a div {
	width:33%;
	float:left;
	margin-top:5px;
	text-align:center;
	padding-top:10px;
	height:60%;
	color:white;
}

h1 {
	font-family: 'Old Standard TT', serif;
	font-weight:300;
	margin-bottom:0;
	padding-bottom:0;
}

.metric_value {
	opacity:0.8;
	font-size:9px;
	font-weight:600;
}

#metric div.topmetric {
	float:left;
	width:450px;
	height:340px;
	margin-bottom:50px;
}

#metric div.metric_title {
	font-family: 'Old Standard TT', serif;
	font-size:22px;
	font-weight:400;
	margin-left:auto;
	margin-right:auto;
	position:absolute;
	height:20px;
	text-align:center;
	margin-top:4px;
	color:white;
}

svg rect.module_bar {
}

svg rect.module_bar_transparent {
	opacity:0;
}

#main_options a div div.selected_view {
	clear:both;
	position:absolute;
	margin-top:10px;
	width:450px;
	height:3px;
	background-color:#FF9500;
	padding:0;
	margin-left:0px;
	display:none;
}

#main_options a#switch_to_matrix div div.selected_view {
	margin-left:20px;
	width:429px;
}

#main_options a#switch_to_network div div.selected_view {
	width:440px;
}

#wide_pane {
	position:absolute;
	background-color:#fff;
	height:100px;
	width:1300px;
	margin-bottom:100px;
	margin-left:33px;
	margin-top:30px;
	z-index:1;
	border-top:1px solid #cccccc;
}

#logo_container {
	position:absolute;
	right:0;
	bottom:15px;
	width:100%;
	z-index:2;
	color:#3b3b3b;
	font-size:13px;
	font-weight:400;
	font-family:'Open Sans';
}

#logo_container a {
	border-bottom:1px dotted #a3a3a3;
}

#twitter_block {
	overflow:hidden;
	float:left;
	padding-top:17px;
	padding-left:0px;
	width:77px;
	z-index:2;
	position:relative;
}

#fb_block {
	overflow:hidden;
	float:left;
	padding-top:18px;
	width:150px;
	z-index:2;
	position:relative;
}

#credits_block {
	float:left;
	text-align:left;
	margin-top:13px;
	padding-left:100px;
	width:950px;
	z-index:1;
	position:absolute;
	font-size:12px;
}

#count_hider {
	background-color:#2b2b2b;
	float:left;
	padding-top:17px;
	padding-left:15px;
	width:150px;
	height:40px;
	z-index:222;
	position:absolute;
}

#lhs_left {
	margin-left:-660px;
	margin-top:0px;
	position:absolute;
	opacity:0.4;
	display:none;
}

#lhs_right {
	margin-left:-620px;
	margin-top:0px;
	position:absolute;
	opacity:0.4;
	display:none;
}

#rhs_left {
	margin-left:580px;
	margin-top:0px;
	position:absolute;
	opacity:0.4;
	display:none;
}

#rhs_right {
	margin-left:620px;
	margin-top:0px;
	position:absolute;
	opacity:0.4;
	display:none;
}









#page #container {
	opacity:0.9;
	border-top:1px solid #cccccc;
	background-color:white;
	position:relative;
	height:2500px;
	margin-top:0px;
	width:100%;
	padding-top:30px;
	text-align:center;
	font-size:14px;
	color:#3b3b3b;
}

#page #container #chart_container_container {
	width:1400px;
	/*width:570px;*/
	margin-left:auto;
	margin-right:auto;
}

#page #container #chart_container_container .chart_description {
	text-align:left;
	width:700px;
	float:left;
	padding-right:40px;
	padding-top:0px;
}

#page #container #chart_container_container .chart_description p {
	font-size:14px;
	text-align:justify;
}

#page .chart_container {
	font-weight:200;
	font-size:18px;
	float:left;
	margin-bottom:100px;
	margin-left:0px;
	width:580px;
	height:152px;
	border:0px solid #000000;
	text-align:center;
	color:white;
}

.chart_container span {
	margin-left:20px;
}

.chart_container svg {
	margin-top:5px;
	border:0px solid #494949;
}

.chart_container .container_title {
	font-weight:300;
	color:#3b3b3b;
	display:none;
}

#page .chart_container div {
	margin-top:50px;
	/*-moz-border-radius:4px;
	border-radius:4px;*/
	width:580px;
	height:160px
}

#page .chart_container div svg {
	margin-top:10px;
}

.tick line {
	opacity:0;
}

.tick text {
  fill:black;
  font-size:10.5px;
}
/* ... */

